# ai-crawler

./: .gitignore  README.md  pyproject.toml
ai_datacreator/: __init__.py  cli.py  config.py  crawler.py  curator.py  exporter.py  formats.py  generator.py  hf_push.py  prompts.py
