[project]
name = "ai-datacreator"
version = "0.1.0"
description = "Crawl the web with crawl4ai, generate fine-tuning datasets with local Ollama models, and optionally push them to HuggingFace Hub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "crawl4ai>=0.4.0",
    "ollama>=0.4.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.24.0",
    "datasets>=2.20.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
ai-datacreator = "ai_datacreator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_datacreator"]
